--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   background-color: #f0f2f5;
   color: #333;
   scroll-behavior: smooth;
@@ -38,7 +38,7 @@ a {
 
 .section {
   padding: 4rem 2rem;
-  max-width: 70%;
+  max-width: 90%;
   margin: auto;
   text-align: center;
 }
@@ -61,9 +61,10 @@ li {
 }
 
 .card {
-  width: 75vw;
+  width: 90vh;
+  max-width: 1500px;
   aspect-ratio: 16 / 9;
-  background-image: url('logo.jpeg');
+  background-image: url("logo.jpeg");
   background-size: cover;
   background-position: center;
   border-radius: 20px;
@@ -96,7 +97,7 @@ li {
   height: auto;
   cursor: pointer;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s;
 }
 
@@ -207,5 +208,19 @@ li {
 
   a {
     color: #e0e0e0;
+  }
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    display: none;
+  }
+
+  .card {
+    width: 30vh;
+  }
+
+  .section {
+    max-width: 990%;
   }
 }
