--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ a {
   justify-content: center;
   gap: 1rem;
   padding: 1rem;
-  background-color: #fff;
+  background-color: #b4b4b4;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   position: sticky;
   top: 0;
@@ -32,7 +32,7 @@ a {
 
 .navbar a {
   text-decoration: none;
-  color: #333;
+  color: #fff;
   font-weight: 600;
 }
 
@@ -172,13 +172,14 @@ li {
 }
 
 .donate-btn {
-  background-color: #007bff;
+  background-color: #b3b3b3;
   color: white;
   padding: 0.75rem 1.5rem;
   text-decoration: none;
-  border-radius: 5px;
+  border-radius: 5vh;
   font-weight: bold;
 }
+
 @media (prefers-color-scheme: dark) {
   body {
     background-color: #121212;
@@ -199,8 +200,12 @@ li {
     color: #fff;
   }
 
-  .navbar {
+  .navbar{
     background-color: #1e1e1e;
+  }
+
+  .donate-btn {
+    background-color: #474646;
   }
 
   .card-content button {
@@ -219,9 +224,10 @@ li {
 
   .card {
     width: 80vw;
+    max-height: 50vh;
   }
 
   .section {
-    max-width: 990%;
+    max-width: 90%;
   }
 }
